--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -118,7 +118,7 @@ li.navbar__item {
   justify-content: space-around;
 }
 
-.action__login,
+.header-action__login,
 .navbar__link {
   padding: 4px 21px;
   color: #c9d2da;
@@ -144,7 +144,84 @@ li.navbar__item {
   background: #fff;
 }
 
-.action__signup {
+.header-action {
+  display: flex;
+  align-items: center;
+}
+
+.header-action__login {
+  margin-right: 7px;
+}
+
+.header-action__signup {
   --height: 44px;
   min-width: 104px;
+}
+
+/* Hero */
+.hero {
+  margin-top: 76px;
+  display: flex;
+  align-items: center;
+}
+
+.hero__content {
+  width: 44%;
+  flex-shrink: 0;
+}
+
+.hero__media {
+  flex-grow: 1;
+}
+
+.hero__heading {
+  color: #fff;
+  font-size: 7rem;
+  font-weight: 600;
+  line-height: 1.14286;
+  letter-spacing: -1.4px;
+}
+
+.hero__desc {
+  margin-top: 22px;
+  color: #c9d2da;
+  font-size: 1.8rem;
+  font-weight: 300;
+  line-height: 1.66667; /* 166.667% */
+}
+
+.hero__row {
+  display: flex;
+  align-items: center;
+  margin-top: 38px;
+}
+
+.hero__phone {
+  margin-left: 38px;
+  font-size: 1.8rem;
+  line-height: 1.66667; /* 166.667% */
+  color: #ffffff;
+}
+
+.hero__images {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.hero__img {
+  width: 330px;
+  height: 540px;
+  border-radius: 6px;
+  object-fit: cover;
+}
+
+.hero__img:first-child {
+  position: relative;
+  margin-right: -6px;
+}
+
+.hero__img:last-child {
+  width: 210px;
+  height: 410px;
 }
