--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -511,3 +511,51 @@ li.navbar__item {
 .member__control-next-icon {
   rotate: 180deg;
 }
+
+/* Install */
+.install {
+  margin-top: 190px;
+}
+
+.install__inner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 4px;
+  background: #2e80ce;
+  padding: 0 70px;
+}
+
+.install__img {
+  display: block;
+  width: 284px;
+  height: 522px;
+  object-fit: cover;
+  margin-top: -95px;
+}
+
+.install__content {
+  max-width: 586px;
+}
+
+.install__heading,
+.install__desc {
+  color: #fff;
+}
+
+.install__heading {
+  max-width: 489px;
+}
+
+.install__row {
+  display: flex;
+  gap: 28px;
+  margin-top: 38px;
+}
+
+.install__btn {
+  padding: 0;
+  outline: none;
+  border: none;
+  background-color: transparent;
+}
