--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -66,6 +66,37 @@ a {
   margin-top: 18px;
 }
 
+.control {
+  display: flex;
+  column-gap: 18px;
+}
+
+.control__btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  width: 36px;
+  height: 36px;
+  border-radius: 36px;
+  border: 1px solid #575f66;
+  color: #575f66;
+  outline: none;
+  background: #fff;
+  transition: 0.25s;
+}
+
+.control__btn:hover {
+  background: #2e80ce;
+  border-color: #2e80ce;
+  color: #fff;
+  cursor: pointer;
+}
+
+.control-next-icon {
+  rotate: 180deg;
+}
+
 /* Header */
 .header {
   min-height: 100vh;
@@ -445,6 +476,11 @@ li.navbar__item {
   margin-top: 70px;
 }
 
+.member__control {
+  margin-top: 38px;
+  justify-content: center;
+}
+
 .member-item:hover .member-item__thumb {
   transform: scale(1.1);
 }
@@ -477,39 +513,6 @@ li.navbar__item {
   font-size: 1.4rem;
   font-weight: 300;
   line-height: 1.86;
-}
-
-.member__control {
-  display: flex;
-  justify-content: center;
-  margin-top: 38px;
-  column-gap: 18px;
-}
-
-.member__control-btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  width: 36px;
-  height: 36px;
-  border-radius: 36px;
-  border: 1px solid #575f66;
-  color: #575f66;
-  outline: none;
-  background: #fff;
-  transition: 0.25s;
-}
-
-.member__control-btn:hover {
-  background: #2e80ce;
-  border-color: #2e80ce;
-  color: #fff;
-  cursor: pointer;
-}
-
-.member__control-next-icon {
-  rotate: 180deg;
 }
 
 /* Install */
@@ -558,4 +561,117 @@ li.navbar__item {
   outline: none;
   border: none;
   background-color: transparent;
+}
+
+/* News */
+.news {
+  margin-top: 85px;
+  padding: 85px 0;
+}
+
+.news__inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.news__content {
+  flex-shrink: 0;
+}
+
+.news__heading {
+  max-width: 470px;
+}
+
+.news__more {
+  display: inline-block;
+  margin-top: 28px;
+  color: #10375c;
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: 1.56;
+  text-decoration-line: underline;
+  text-underline-offset: 5px;
+}
+
+.news__control {
+  margin-top: 28px;
+}
+
+.news__list {
+  display: flex;
+  column-gap: 30px;
+  max-width: 570px;
+}
+
+.news-item {
+  overflow: hidden;
+  border-radius: 12px;
+  flex: 1;
+  transition: 0.25s;
+}
+
+.news-item:hover {
+  box-shadow: 0px 18px 50px 0px rgba(0, 0, 0, 0.05);
+}
+
+.news-item:hover .news-item__body {
+  border-color: #fff;
+}
+
+.news-item:hover .news-item__img {
+  transform: scale(1.1);
+}
+
+.news-item__thumb {
+  height: 172px;
+  overflow: hidden;
+}
+
+.news-item__img {
+  display: block;
+  width: 100%;
+  height: 172px;
+  object-fit: cover;
+  transition: 0.25s;
+}
+
+.news-item__body {
+  padding: 24px 24px 16px;
+  border-radius: 0 0 12px 12px;
+  border: 1px solid #e8ebee;
+  background: #fff;
+  border-top: none;
+  transition: 0.25s;
+}
+
+.news-item__heading {
+  color: #10375c;
+  font-size: 1.6rem;
+  font-weight: 600;
+  line-height: 1.62; /* 162.5% */
+  margin-top: 18px;
+}
+
+.news-item__desc {
+  max-width: 226px;
+  color: #575f66;
+  font-size: 1.4rem;
+  font-weight: 300;
+  line-height: 1.71; /* 171.429% */
+  margin-top: 10px;
+}
+
+.news-item__more {
+  display: inline-block;
+  margin-top: 12px;
+  color: #10375c;
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 1.8;
+  font-weight: 500;
+}
+
+.news-item__more:hover {
+  color: #2e80ce;
 }
