--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -675,3 +675,39 @@ li.navbar__item {
 .news-item__more:hover {
   color: #2e80ce;
 }
+
+/* Appointment */
+.appointment {
+  margin: 85px 0 170px;
+}
+
+.appointment__inner {
+  text-align: center;
+  background-color: #f6fbff;
+  border-radius: 4px;
+  padding: 100px 70px;
+}
+
+.appointment__heading {
+  position: relative;
+  padding-bottom: 20px;
+}
+
+.appointment__heading::after {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: 0 auto;
+  display: block;
+  content: "";
+  width: 136px;
+  height: 2px;
+  background: #2e80ce;
+}
+
+.appointment__desc {
+  max-width: 617px;
+  margin: 18px auto 38px;
+  font-size: 1.6rem;
+}
